# stock_market_analysis

./: LICENSE
backend/: alembic.ini  pyproject.toml
backend/app/: .env.local  main.py
backend/app/api/v1/: router.py
backend/app/api/v1/infra/: get_market_data.py
backend/app/batch/: __init__.py  init_market_data.py
backend/app/core/: config.py  logger.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  balance_sheet.py  cashflow.py  commodities.py  commodity_price.py  currency.py  financials.py  income_stmt.py  miners.py  quarterly_income_stmt.py  sector.py  stocks.py  trn_stock_price.py  white_list.py
backend/app/schemas/: commodity_data.py  corp_finance_data.py  search.py  stock_data.py  stock_price_index.py  stocks.py  time_series_data.py
backend/migrations/: env.py
backend/migrations/versions/: 20260425_make_income_revenue_nullable.py  f892bf659b0c_auto_migration.py
backend/seeds/: __init__.py  init.py  run.py
backend/seeds/csv/: mst_sector.csv  trn_white_list.csv
backend/seeds/data/: mst_currency.json  mst_sector.json  trn_white_list.json
backend/tests/: conftest.py
backend/tests/unit/infra/: test_get_market_data.py
backend/tests/unit/routers/: test_commodity_data.py  test_corp_finance_data_router.py  test_search_router.py  test_stock_data_router.py  test_stock_price_index_router.py  test_stocks_router.py  test_time_series_commodity_data_router.py  test_time_series_data.py  test_time_series_data_router.py
backend/tests/unit/services/: test_commodity_data.py  test_corp_finance_data.py  test_search.py  test_stock_data.py  test_stock_price_index.py  test_stocks.py  test_time_series_commodity_data.py  test_time_series_data.py  test_time_series_stock_data.py
container/: Makefile  (+2 more)
container/notebook/: Dockerfile  pyproject.toml  requestment.txt
(+115 files in other folders)
