[project]
name = "stock-market-notebook"
version = "0.1.0"
description = "Stock market analysis Jupyter notebook environment"
requires-python = ">=3.12"
dependencies = [
    "jupyterlab>=4.2.0",
    "ipython>=8.26.0",
    "anywidget>=0.9.18",
    "ipywidgets>=8.1.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
    "plotly>=5.22.0",
    "mplfinance>=0.12.10b0",
    "yfinance>=0.2.40",
    "requests>=2.32.0",
    "httpx>=0.27.0",
    "statsmodels>=0.14.0",
    "scikit-learn>=1.5.0",
    "prophet>=1.1.5",
    "backtesting>=0.3.3",
    "option-price>=0.1.1",
    "getFamaFrenchFactors>=0.0.5",
    "TA-Lib>=0.4.32",
    "python-dotenv>=1.0.0",
    "highcharts-core>=1.4.0",
    "highcharts-stock>=1.4.0",
    "highcharts-maps>=1.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
